--- a/public/backend/css/my.css
+++ b/public/backend/css/my.css
@@ -61,7 +61,7 @@ label .f_caution {
 }
 
 .copyright-fixed {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height:62px;
