--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -3445,7 +3445,7 @@ span.required {
 
 .help-block {
     color: #D50000;
-    background-image: url('../images/warning-icon_002.png');
+    background-image: url('../images/warning_001.png');
     background-repeat: no-repeat;
     padding-left: 20px;
 }
