--- a/public/backend/css/pdf.css
+++ b/public/backend/css/pdf.css
@@ -15,13 +15,13 @@ body {
   font-style: normal;
   font-weight: normal; */
   font-size: 10px;
-  //color: #D9D9D9;
+  color: #000000;
   width: 100%;
 }
 
 
 .container {
-	//width: 100%;
+	width: 123%;
 }
 
 table {
@@ -42,7 +42,7 @@ tr{
 td{
  text-align:center; 
  vertical-align:middle;
- height: 28px;
+ height: 25px;
  //width: 28px;
  border-right: 0.5px solid #000000;
  border-top: 0.5px solid #000000;
@@ -83,7 +83,7 @@ td.col-left {
 }
 
 .col-name {
-	width: 80px;
+	width: 136px;
 	//text-align: left;
 }
 
@@ -102,16 +102,16 @@ td.col-left {
 	width: 428px;
 }
 
-td.width-normal {
-	width: 40px;
+td.col-normal {
+	width: 58px;
 }
 
 td.remark {
-	width: 70px !important;
+	width: 140px !important;
 }
 
-td.col-reason {
-	width: 50px !important;
+td.col-total {
+	width: 68px !important;
 }
 
 td.col-first {
