--- a/public/backend/css/pdf.css
+++ b/public/backend/css/pdf.css
@@ -24,6 +24,7 @@ table {
 	margin-top: 18px;
 	width: 735px;
 	border-left: 0.5px solid #000000;
+	border-top: 0.5px solid #000000;
 }
 
 tr{
@@ -36,7 +37,6 @@ td{
  vertical-align:middle;
  height: 25px;
  border-right: 0.5px solid #000000;
- border-top: 0.5px solid #000000;
  border-bottom: 0.5px solid #000000;
 }
 
@@ -46,10 +46,11 @@ tr.old {
 
 .header {
 	background: #D9D9D9;
+	height: 35px;
 }
 
 .bottom-line {
-	border-bottom: 1.5px double #000000;
+	border-bottom: 2px solid #000000;
 }
 
 .col-name {
