--- a/public/backend/css/pdf.css
+++ b/public/backend/css/pdf.css
@@ -73,7 +73,7 @@ tr.old {
 }
 
 td.col-normal {
-	width: 24px;
+	width: 53px; min-width:50px; 
 }
 
 td.remark {
@@ -81,7 +81,7 @@ td.remark {
 }
 
 td.col-total {
-	width: 25px !important;
+	width: 50px !important;
 }
 
 .bg-red {
