--- a/public/backend/css/pdf.css
+++ b/public/backend/css/pdf.css
@@ -22,7 +22,7 @@ body {
 
 table {
 	margin-top: 18px;
-	width: 735px;
+	width: 100%;
 	border-left: 0.5px solid #000000;
 	border-top: 0.5px solid #000000;
 }
